--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@nomiclabs/hardhat-ethers": "2.2.3",
     "chai": "4.3.6",
     "ethers": "5.7.2",
-    "hardhat": "2.26.0"
+    "hardhat": "2.26.0",
+    "babel-preset-es2015": "^6.9.0"
   }
 }
